[package]
name = "manga-cli"
version = "0.1.0-dev"
authors = ["Hentioe <me@bluerain.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "manga"
path = "src/lib.rs"

[[bin]]
name = "manga-cli"
path = "src/bin/main.rs"

[dependencies]
manga-rs = { git = "https://github.com/Hentioe/manga-rs", branch = "master" }
lazy_static = "1.4.0"
clap = "2.33.0"
reqwest = "0.10.1"
indicatif = "0.13.0"
regex = "1.3.3"