[package]
name = "manga-cli"
version = "0.1.0-dev"
authors = ["Hentioe <me@bluerain.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "manga"
path = "src/lib.rs"

[[bin]]
name = "manga-cli"
path = "src/bin/main.rs"

[dependencies]
manga-rs = { git = "https://github.com/Hentioe/manga-rs", branch = "master" }
lazy_static = "1.4.0"
clap = "2.33.0"
reqwest = {version = "0.10.1"}
indicatif = "0.13.0"
regex = "1.3.3"
serde_json = "1.0.44"
uuid = { version = "0.8.1", features = ["v4"] }
tera = "1.0.2"
chrono = "0.4"
zip = "0.5.4"
scan_dir = "0.3.3"